--- a/packages/web/src/app/globals.css
+++ b/packages/web/src/app/globals.css
@@ -63,7 +63,26 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.fc-more-link {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;  
+  background-color: white !important;
+  color: black !important;
+  padding: 4px 8px !important;
+  font-size: 0.75rem !important;
+}
+
+.fc-daygrid-day-bottom {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  width: 100% !important;
+  margin-top: 10px !important;
 }
